--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
       </div>
       <div id="messageDisplayArea"></div>
      
-      //Code for making the first canvas
+      /*Code for making the first canvas*/
       <canvas id="myCanvas" width=600 height=500 style="border:1px solid #d3d3d3;"></canvas>
       <script> /* This script initiates the cavas and puts the text on the canvas "myCanvas" */
         var canvas = document.getElementById('myCanvas');
@@ -142,7 +142,7 @@
         context.fillText("Original image will go here", 10, 20);
       </script>
      
-    	//Code copied for the second canvas with "2" attached to it
+    	/*Code copied for the second canvas with "2" attached to it*/
      <canvas id="myCanvas2" width=600 height=500 style="border:1px solid #d3d3d3;"></canvas>
       <script> /* This script initiates the canvas and puts the text on the second canvas "myCanvas2" */
         var canvas2 = document.getElementById('myCanvas2');
