--- a/index.html
+++ b/index.html
@@ -147,9 +147,9 @@
       <script> /* This script initiates the canvas and puts the text on the second canvas "myCanvas2" */
         var canvas2 = document.getElementById('myCanvas2');
         var context2 = canvas.getContext("2d");
-        context.font = '20pt Calibri';
-        context.fillStyle = "black";
-        context.fillText("Original image, but blue, will go here", 10, 20);
+        context2.font = '20pt Calibri';
+        context2.fillStyle = "black";
+        context2.fillText("Original image, but blue, will go here", 10, 20);
 
     </div><!-- /content -->
     <div data-role="footer" data-position="fixed">
