closing script to debug

--- a/index.html
+++ b/index.html
@@ -150,7 +150,8 @@
         context2.font = '20pt Calibri';
         context2.fillStyle = "black";
         context2.fillText("Original image, but blue, will go here", 10, 20);
-
+      </script>
+     
     </div><!-- /content -->
     <div data-role="footer" data-position="fixed">
       <p>DIY Diagnostics</p>
