--- a/index.html
+++ b/index.html
@@ -110,7 +110,10 @@
       //creates a loop to go through the pixels in the image
          for(let i=0; i< data.length; i+=4) {
            data[i]=0; // the red pixels are removed
+           data[i+1]=0;// green pixels are also removed with this code.
+         }
      
+        } // end of img.onload
         
         img.src = reader.result;
       } //  end of reader.onload
