--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
         var context2 = canvas2.getContext("2d");
         context2.font = '20pt Calibri';
         context2.fillStyle = "black";
-        context2.fillText("Original image, but blue, will go here", 10, 20);
+        context2.fillText("Original image, but blue, will go here", 10, 20); /* new text specific to canvas 2 */
       </script>
      
     </div><!-- /content -->
