--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
            data[i+1]=0;// green pixels are also removed with this code.
          }
       // display only the blue pixels on canvas 2
-         context2.putImageData(imageData, 0,0);
+         con2.putImageData(imageData, 0,0);
             
         } // end of img.onload
         
