--- a/index.html
+++ b/index.html
@@ -104,12 +104,12 @@
       const data= imageData.data;
 
       //creates a loop to go through the pixels in the image
-         for(let i=0; i< data.length; i+=4) {
+         for(let i=0; i < data.length; i += 4) {
            data[i]=0; // the red pixels are removed
            data[i+1]=0;// green pixels are also removed with this code.
          }
       // display only the blue pixels on canvas 2
-         ctx2.putImageData(imageData, 0,0);
+         context2.putImageData(imageData, 0,0);
             
         } // end of img.onload
         
